@@ -103,20 +103,36 @@ Returns a stream of the output generated by executing C<source>.
 =cut
 
 sub get_stream {
-    my ($self) = @_;
-    my @command = $self->_get_command
+    my $self     = shift;
+    my @switches = $self->_switches;
+
+    my @command = $self->_get_command_for_switches(@switches)
       or $self->_croak("No command found!");
 
-    my $setup = sub {
-        my @command = @_;
+    # Nasty kludge. It might be nicer if we got the libs separately
+    # although at least this way we find any -I switches that were
+    # supplied other then as explicit libs
+    my @libs;
+    for (@switches) {
+        push @libs, $1 if / ^ -I (.*) $ /x;
+    }
+    my $previous = $ENV{PERL_TEST_LIBS};
 
-        #warn "setup for ", join(' ', @command), "\n";
+    my $setup = sub {
+        if (@libs) {
+            $ENV{PERL_TEST_LIBS} = join( ':', @libs );
+        }
     };
 
+    # Cargo culted from comments seen elsewhere about VMS / environment
+    # variables. I don't know if this is actually necessary.
     my $teardown = sub {
-        my @command = @_;
-
-        #warn "teardown for ", join(' ', @command), "\n";
+        if ($previous) {
+            $ENV{PERL_TEST_LIBS} = $previous;
+        }
+        else {
+            delete $ENV{PERL_TEST_LIBS};
+        }
     };
 
     return TAP::Parser::Iterator->new(
@@ -128,18 +144,20 @@ sub get_stream {
     );
 }
 
-sub _get_command {
+sub _get_command_for_switches {
     my $self     = shift;
+    my @switches = @_;
     my $file     = $self->source;
     my $command  = $self->_get_perl;
-    my @switches = $self->_switches;
 
     $file = qq["$file"] if ( $file =~ /\s/ ) && ( $file !~ /^".*"$/ );
     my @command = ( $command, @switches, $file );
-
-    #use Data::Dumper;
-    #warn Dumper(\@command);
     return @command;
+}
+
+sub _get_command {
+    my $self = shift;
+    return $self->_get_command_for_switches( $self->_switches );
 }
 
 sub _switches {
